# rootstock

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  rootstock-viewer.html
graph/: api.py  bloodhound_import.py  clear_owned.py  constants.py  cve_enrichment.py  cve_reference.py  diff_formatters.py  diff_models.py  diff_scans.py  docker-compose.yml  enrichment.py  generate_mock_graph.py  import.py  import_nodes.py  import_nodes_core.py  import_nodes_enrichment.py  import_nodes_security.py  import_nodes_security_enterprise.py  import_nodes_services.py  import_vulnerabilities.py  infer.py  infer_accessibility.py  infer_automation.py  infer_electron.py  infer_esf.py  infer_file_acl.py  infer_finder_fda.py  infer_group_capabilities.py  infer_injection.py  infer_kerberos.py  infer_keychain_groups.py  infer_mdm_overgrant.py  infer_password.py  infer_quarantine.py  infer_recommendations.py  infer_risk_score.py  infer_sandbox.py  infer_shell_hooks.py  mark_owned.py  merge_scans.py  (+25 more)
graph/browser/: rootstock-guide.html  rootstock-style.grass  saved-queries.cypher  setup-browser.sh
graph/queries/: 01-injectable-fda-apps.cypher  02-shortest-path-to-fda.cypher  03-electron-tcc-inheritance.cypher  04-private-entitlement-audit.cypher  05-appleevent-tcc-cascade.cypher  06-injection-chain.cypher  07-tcc-grant-overview.cypher  08-persistence-audit.cypher  09-keychain-acl-audit.cypher  10-mdm-managed-tcc.cypher  100-top-recommendations.cypher  (+91 more)
(+269 files in other folders)
