[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rootstock-graph"
version = "0.1.0"
description = "Rootstock graph import and query engine"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0",
    "pydantic>=2.0",
    "tabulate>=0.9",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "requests>=2.28",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
