[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rootstock-graph"
version = "0.1.0"
description = "Rootstock graph import and query engine"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0,<6.0",
    "pydantic>=2.12.5,<3.0",
    "tabulate>=0.9,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "requests>=2.28,<3.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
